# V-Code

./: .gitignore  ARCHITECTURE.md  COMPILAR_SIN_RUST.md  CONTRIBUTING.md  HAZLO_TU_MISMO.md  INSTALL.md  INSTRUCCIONES_COMPILACION.md  LICENSE  QUICKSTART.md  README.md  RESUMEN_PROYECTO.md  SITUACION.md  compilar.bat  compilar.sh  subir-a-github.sh
.github/workflows/: release.yml
compilador/: Cargo.toml
compilador/src/: ast.rs  ejecutor.rs  lexer.rs  main.rs  parser.rs
ejemplos/: control_flujo.vc  funciones.vc  hola.vc  variables.vc  vr_demo.vc
